[gd_scene load_steps=2 format=3 uid="uid://dxrykummc2xsj"]

[ext_resource type="Script" path="res://src/workstation/node/script/ScriptFile.gd" id="1_sial8"]

[node name="ScriptFile" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 6
script = ExtResource("1_sial8")

[node name="root" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="btn_name" type="Button" parent="root"]
layout_mode = 2
size_flags_horizontal = 3
text = "<Name>"

[node name="btn_delete" type="Button" parent="root"]
layout_mode = 2
text = "Deletar"

[connection signal="pressed" from="root/btn_name" to="." method="_on_btn_name_pressed"]
[connection signal="pressed" from="root/btn_delete" to="." method="_on_btn_delete_pressed"]
